Miscellaneous updates: - Updated manifest.json to refer to correct assets, and remove CRA references. - Update index.html to remove CRA references. Description is taken from last local elections site for now. - Fixed "can't pass a ref to a functional component" runtime error by wrapping FC in forwardRef. - Updated styles to fix the horizontal scroll bar, and remove second set of scroll bars. - Updated styles so body is only as tall as the content it contains. - Re-enabled React.StrictMode - Removed reportWebVitals since it is not being used.

--- a/src/App.css
+++ b/src/App.css
@@ -50,7 +50,6 @@ body {
 /* use viewport-relative units to cover page fully */
 body {
   height: 100vh;
-  width: 100vw;
 }
 
 /* include border and padding in element width and height */
